Added additional screenshots and captions

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
         .cont {
             display: grid;
-            gap: 20px;
+            gap: 10px;
             align-items: center;
             grid-template-areas: 
             "content picture1"
@@ -209,9 +209,11 @@
                     <img src="./../media/ps2m.PNG">
                 </div>
             </div>
+            <p>Before and after view of a large area. Drag the blue circle to see the difference</p>
         </div>
         <div>
             <img src="./../media/ps7.PNG">
+            <p>The tree brush UI</p>
         </div>
         <div>
             <div class="img-comp-container">
@@ -222,18 +224,31 @@
                     <img src="./../media/ps1m.PNG">
                 </div>
             </div>
+            <p>Before and after closeup</p>
         </div>
         <div>
             <img src="./../media/ps3.PNG">
+            <p>A lift that turns, based on snowflake at Breckenridge Ski Resort, CO.</p>
         </div>
         <div>
             <img src="./../media/ps4.PNG">
+            <p>Realistic sheaves and realistic cable droop using caternery curves</p>
         </div>
         <div>
             <img src="./../media/ps5.PNG">
+            <p>A pulsed gondola lift, the entire lift slows down when a set of pods enters a station</p>
         </div>
         <div>
             <img src="./../media/ps6.PNG">
+            <p>Padding is automatically added when the lift towers are in the path of a slope</p>
+        </div>
+        <div>
+            <img src="./../media/ps8.PNG">
+            <p>Saddles deform to point perfectly tangent to the path of the lift</p>
+        </div>
+        <div>
+            <img src="./../media/ps9.PNG">
+            <p>Towers intelligently change their height depending on the lift type and terrain</p>
         </div>
         </div>
     </section>
