Finished programming introduction

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,15 @@
     <div class="spacer-container"><div class="spacer wave1"></div></div>
     <section id="prog">
         <h2>Programming Portfolio</h2>
-        <img src="./../media/langs.png" class="center">
+        <!-- <img src="./../media/langs.png" class="center"> -->
+        <h3>Overview</h3>
+            <p>
+                I program for a variety of reasons in a variety of languages. I am proficient in C, C++, C#, Java, Javscript, HTML, CSS, Rust, Python, GLSL, and x86 Assembly. My projects
+                include 3D rendering with OpenGL and Vulkan, programming languages, mods for games, helpful scripts, robot control systems, and more. I program mostly to learn, I don't
+                anticipate that knowing assembly will be very useful, but I wanted to understand how it worked. I've also learned a lot about how how computer hardware works, and how to
+                take advantage of the cache, the branch predictor, and other optimizations, though I haven't had a good opportunity to put that into practice. <br><br>
+                <a href="https://github.com/charles-bruel">Here is a link to my github</a>, I post most of my code there.
+            </p>
         <div class="cont">
         <div class="content">
             <h3>Avalanche Mod</h3>
