--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
         <h1>Charles Bruel</h1>
         <p>
             Hello I'm Charlie. I'm a senior in at Minuteman High School where I study Engineering. I've included some of my engineering projects in this portfolio. At 
-            Minuteman, I am captain of our <i>FIRST</i> robotics team, so I've included some of my contributions to the team. In addition to engineering, I also have a deep 
+            Minuteman, I am the captain of our <i>FIRST</i> robotics team, so I've included some of my contributions to the team. In addition to engineering, I also have a deep 
             interest in computers, and every level of how they work, from hardware to software. Over my near decade of coding, I've created many projects, some of which I show 
             in this portfolio.
         </p>
@@ -181,7 +181,7 @@
     <div class="spacer-container"><div class="spacer wave1"></div></div>
     <section id="prog">
         <h2>Programming Portfolio</h2>
-        <!-- <img src="./../media/langs.png" class="center"> -->
+        <img src="./../media/langs.png" class="center">
         <h3>Overview</h3>
             <p>
                 I program for a variety of reasons in a variety of languages. I am proficient in C, C++, C#, Java, Javscript, HTML, CSS, Rust, Python, GLSL, and x86 Assembly. My projects
@@ -228,6 +228,9 @@
             <h4>Other Features</h4>
             <p>
                 The mod also contains innumerable other minor features, mostly quality of life features, that I do not have time to list here.
+            </p>
+            <p>
+                <a href="https://github.com/charles-bruel/avalanche-github">Partial source code for the project can be found here.</a>
             </p>
         </div>
         <div>
@@ -281,11 +284,15 @@
             <p>Towers intelligently change their height depending on the lift type and terrain</p>
         </div>
         </div>
+        <h3>Lexica</h3>
+        <h3>Rendering Projects</h3>
+        <h3>Binary Palettes</h3>
     </section>
     <div class="spacer-container"><div class="spacer wave2"></div></div>
     <section id="eng">
         <h2>Engineering Portfolio</h2>
-        <p>Voluptas labore accusamus nisi, officia accusantium repudiandae architecto placeat debitis ipsum, autem molestias cum sunt nulla, dolore consequatur ex exercitationem repellendus doloremque reprehenderit nostrum eius! Corrupti temporibus quis reprehenderit maiores!</p>
+        <h3>Overview</h3>
+        <h3>Swerve Module</h3>
     </section>
 
     <script defer>//Shamelessly stolen from https://www.w3schools.com/howto/howto_js_image_comparison.asp
