Moved index.html into root directory

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         }
 
         .wave1 {
-            background-image: url(./../media/wave1.svg);
+            background-image: url(.//media/wave1.svg);
         }
 
         .wave2 {
-            background-image: url(./../media/wave2.svg);
+            background-image: url(.//media/wave2.svg);
         }
 
         .break {
@@ -181,7 +181,7 @@
     <div class="spacer-container"><div class="spacer wave1"></div></div>
     <section id="prog">
         <h2>Programming Portfolio</h2>
-        <img src="./../media/langs.png" class="center">
+        <img src=".//media/langs.png" class="center">
         <h3>Overview</h3>
             <p>
                 I program for a variety of reasons in a variety of languages. I am proficient in C, C++, C#, Java, Javscript, HTML, CSS, Rust, Python, GLSL, and x86 Assembly. My projects
@@ -236,51 +236,51 @@
         <div>
             <div class="img-comp-container">
                 <div class="img-comp-img">
-                    <img src="./../media/ps2o.PNG">
+                    <img src=".//media/ps2o.PNG">
                 </div>
                 <div class="img-comp-img img-comp-overlay">
-                    <img src="./../media/ps2m.PNG">
+                    <img src=".//media/ps2m.PNG">
                 </div>
             </div>
             <p>Before and after view of a large area. Drag the blue circle to see the difference</p>
         </div>
         <div>
-            <img src="./../media/ps7.PNG">
+            <img src=".//media/ps7.PNG">
             <p>The tree brush UI</p>
         </div>
         <div>
             <div class="img-comp-container">
                 <div class="img-comp-img">
-                    <img src="./../media/ps1o.PNG">
+                    <img src=".//media/ps1o.PNG">
                 </div>
                 <div class="img-comp-img img-comp-overlay">
-                    <img src="./../media/ps1m.PNG">
+                    <img src=".//media/ps1m.PNG">
                 </div>
             </div>
             <p>Before and after closeup</p>
         </div>
         <div>
-            <img src="./../media/ps3.PNG">
+            <img src=".//media/ps3.PNG">
             <p>A lift that turns, based on snowflake at Breckenridge Ski Resort, CO.</p>
         </div>
         <div>
-            <img src="./../media/ps4.PNG">
+            <img src=".//media/ps4.PNG">
             <p>Realistic sheaves and realistic cable droop using caternery curves</p>
         </div>
         <div>
-            <img src="./../media/ps5.PNG">
+            <img src=".//media/ps5.PNG">
             <p>A pulsed gondola lift, the entire lift slows down when a set of pods enters a station</p>
         </div>
         <div>
-            <img src="./../media/ps6.PNG">
+            <img src=".//media/ps6.PNG">
             <p>Padding is automatically added when the lift towers are in the path of a slope</p>
         </div>
         <div>
-            <img src="./../media/ps8.PNG">
+            <img src=".//media/ps8.PNG">
             <p>Saddles deform to point perfectly tangent to the path of the lift</p>
         </div>
         <div>
-            <img src="./../media/ps9.PNG">
+            <img src=".//media/ps9.PNG">
             <p>Towers intelligently change their height depending on the lift type and terrain</p>
         </div>
         </div>
