Added embedded binary palette demo

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
             flex-basis: 100%;
             height: 0;
         }
+        iframe {
+            display:block;
+            margin: 0 auto;
+            background-color: #A0B4CE;
+            border: none;
+        }
     </style>
 
     <style>
@@ -287,6 +293,7 @@
         <h3>Lexica</h3>
         <h3>Rendering Projects</h3>
         <h3>Binary Palettes</h3>
+        <iframe width=400 height=425 src="./binary-palette/src/binarypalette-simple.html"></iframe>
     </section>
     <div class="spacer-container"><div class="spacer wave2"></div></div>
     <section id="eng">
