Added binary palette section layout Also labelled grid section classes better

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             padding: 100px 10vw;
         }
 
-        .cont {
+        .avalanche-content {
             display: grid;
             gap: 10px;
             align-items: center;
@@ -124,11 +124,20 @@
             flex-basis: 100%;
             height: 0;
         }
+
         iframe {
             display:block;
             margin: 0 auto;
             background-color: #A0B4CE;
             border: none;
+        }
+        
+        .bp-content {
+            display: grid;
+            gap: 10px;
+            align-items: center;
+            grid-template-areas: 
+            "demo content"
         }
     </style>
 
@@ -196,7 +205,7 @@
                 take advantage of the cache, the branch predictor, and other optimizations, though I haven't had a good opportunity to put that into practice. <br><br>
                 <a href="https://github.com/charles-bruel">Here is a link to my github</a>, I post most of my code there.
             </p>
-        <div class="cont">
+        <div class="avalanche-content">
         <div class="content">
             <h3>Avalanche Mod</h3>
             <h4>Introduction</h4>
@@ -293,7 +302,22 @@
         <h3>Lexica</h3>
         <h3>Rendering Projects</h3>
         <h3>Binary Palettes</h3>
-        <iframe width=400 height=425 src="./binary-palette/src/binarypalette-simple.html"></iframe>
+        <div class="bp-content">
+            <iframe width=400 height=425 src="./binary-palette/src/binarypalette-simple.html"></iframe>
+            <div>
+                <p>
+
+                    Morbi suscipit molestie urna vel pretium. Sed blandit est nec cursus elementum. Phasellus facilisis turpis ut dolor semper hendrerit. Praesent volutpat elit nec tristique euismod. Integer pharetra enim ut volutpat fringilla. Phasellus commodo malesuada maximus. Proin et turpis tortor. Maecenas vulputate ultrices urna, vel euismod est dapibus vel. In finibus viverra aliquet. Etiam mattis turpis ut massa egestas, ac eleifend erat placerat. Pellentesque felis risus, venenatis et rutrum non, pharetra sit amet orci. Phasellus eu risus sit amet ante tincidunt gravida. Curabitur et sem in dui vehicula volutpat ut non ligula. Maecenas rhoncus tincidunt maximus. Vivamus venenatis massa in turpis euismod aliquam. Donec mollis ac ipsum nec interdum.
+                    <br><br>
+                    Ut hendrerit eros nec lacus condimentum, non efficitur magna tincidunt. Morbi nec sem convallis, mollis odio et, hendrerit enim. Sed ut odio ex. Suspendisse imperdiet nisi a feugiat fermentum. Morbi non aliquet eros. Pellentesque lobortis vulputate semper. Etiam porttitor ac lacus sit amet elementum. Nunc vitae finibus enim, sed pulvinar lacus. Phasellus sagittis massa est, ut aliquet augue facilisis nec.
+                    <br><br>
+                    Nunc ut tristique lorem. Etiam eget dui blandit, mattis nulla sit amet, porta tellus. Vivamus lectus quam, lacinia at tellus eget, interdum ultrices massa. Quisque odio est, bibendum ac lorem id, mattis pellentesque quam. Nulla ex justo, ultrices ut hendrerit sit amet, tristique ac augue. Etiam convallis nulla nec orci malesuada, non faucibus nisl viverra. Phasellus scelerisque dolor a odio consectetur, non pellentesque ligula blandit. Maecenas vitae neque id purus auctor pulvinar vitae sed lorem. In accumsan mauris finibus sem imperdiet consectetur.
+                    <br><br>
+                    Donec porttitor a nisi non dictum. Quisque purus dolor, mollis at erat at, consequat semper nibh. Proin non erat in ligula facilisis tincidunt a sed lacus. Aliquam erat volutpat. Sed rhoncus mi commodo dapibus bibendum. Nullam turpis tortor, sodales a sodales eu, condimentum ac felis. Phasellus eleifend orci sit amet erat gravida, id commodo mi semper. Pellentesque bibendum eu dui eget rhoncus. Nulla in augue enim. Suspendisse risus elit, porttitor sit amet molestie et, accumsan eget nisl. Fusce sit amet libero lectus. Aenean hendrerit lobortis ligula, sit amet tincidunt massa congue blandit. Fusce malesuada viverra augue eget egestas.
+                    <br><br>
+                    Aenean varius nec leo aliquam efficitur. Fusce tincidunt eget lacus a blandit. Curabitur pulvinar dolor fringilla elementum dictum. Mauris non tincidunt augue, suscipit vestibulum sem. Curabitur blandit libero quis malesuada imperdiet. Nullam porta ex vel sagittis aliquam. Donec ut mi ac elit dapibus tristique. Duis eget ornare tortor. Donec non magna ex. Nunc elementum purus enim, id congue turpis ornare eu. Sed feugiat sollicitudin eros, at finibus lorem ultricies nec. Ut facilisis, velit eu mollis molestie, dui ex pretium eros, non egestas elit erat ut massa. Cras ullamcorper malesuada volutpat. Sed ipsum erat, fermentum vitae sapien lacinia, varius pharetra lectus. </p>
+            </div>
+        </div>
     </section>
     <div class="spacer-container"><div class="spacer wave2"></div></div>
     <section id="eng">
